--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "@types/react": "^18.2.21",
+    "@types/node": "^20.6.5"
   }
 }
