--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
     "pg": "^8.11.0"
-  }
   },
   "devDependencies": {
     "typescript": "5.2.2",
     "@types/react": "^18.2.21",
     "@types/node": "^20.6.5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
