--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "5.2.2",
     "@types/react": "^18.2.21",
     "@types/node": "^20.6.5"
+    "@supabase/supabase-js": "^2.26.0"
   },
   "engines": {
     "node": "22.x"
