--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@supabase/supabase-js": "^2.26.0"
+    "@supabase/supabase-js": "^2.26.0",
     "lucide-react": "^0.268.0"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.7",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14",
     "typescript": "5.2.2",
     "@types/react": "^18.2.21",
     "@types/node": "^20.6.5"
