--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "^2.26.0",
     "lucide-react": "^0.268.0"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
