--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "^2.26.0",
-    "lucide-react": "^0.268.0"
+    "lucide-react": "^0.268.0",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
