--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:Gsb606055@db.ygisiztmuzwxpnvhwrmr.supabase.co:5432/postgres
+postgresql://postgres.ygisiztmuzwxpnvhwrmr:Gbs%4017808017@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
