--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build",
+    "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify",
+    "build": "npm run build:css && next build",
     "start": "next start -p 3000",
     "lint": "next lint"
   },
