--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "18.2.0",
     "pg": "^8.11.0",
     "@supabase/supabase-js": "^2.26.0",
-    "lucide-react": "^0.268.0"
+    "lucide-react": "^0.268.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
