--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pg": "^8.11.0",
     "@supabase/supabase-js": "^2.26.0",
     "lucide-react": "^0.268.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
@@ -23,9 +24,4 @@
     "autoprefixer": "^10.4.14",
     "typescript": "5.2.2",
     "@types/react": "^18.2.21",
-    "@types/node": "^20.6.5"
-  },
-  "engines": {
-    "node": "22.x"
-  }
-}
+    "@types/node": "^20.6.5",
