Add @types/react-modal to package.json

--- a/package.json
+++ b/package.json
@@ -25,3 +25,9 @@
     "typescript": "5.2.2",
     "@types/react": "^18.2.21",
     "@types/node": "^20.6.5",
+    "@types/react-modal": "^3.13.1"
+  },
+  "engines": {
+    "node": "22.x"
+  }
+}
