--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0",
     "pg": "^8.11.0",
     "@supabase/supabase-js": "^2.26.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
     "lucide-react": "^0.268.0",
     "bcryptjs": "^2.4.3",
     "react-modal": "^3.16.1"
