--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "lucide-react": "^0.268.0",
     "bcryptjs": "^2.4.3",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.7",
