--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+cat > package.json <<'EOF'
 {
   "name": "raileats-admin-example",
   "version": "1.0.0",
@@ -33,3 +34,4 @@
     "node": "22.x"
   }
 }
+EOF
